# convert_md_obsidian_hugo

./: README.md  setup.cfg
convert_md_obsidian_hugo/: __main__.py
