[metadata]
name = convert_md_obsidian_hugo
version = 0.0.1
author = Sergey Novikov
author_email = novikov.nsa@yandex.ru
description = Утилита для преобразования ссылок md-файла формата obsidian в формат hugo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/novikov-nsa/convert_md_obsidian_hugo
project_urls =
    Bug Tracker = https://github.com/novikov-nsa/convert_md_obsidian_hugo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
        = .
packages = convert_md_obsidian_hugo
python_requires = >=3.6

include_package_data=True

[options.packages.find]
where =